Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27764

clangd does not work correctly with CMake INTERFACE libraries

    XMLWordPrintable

Details

    • Windows
    • 06e2f8d8fa (qt-creator/qt-creator/8.0) 06e2f8d8fa (qt-creator/qt-creator/master) 06e2f8d8fa (qt-creator/qt-creator/qds-3.6) 06e2f8d8fa (qt-creator/qt-creator/9.0)

    Description

      • interface libraries don't appear in the C++ Code Model Inspector.
      • clangd doesn't seem to get the compiler parameters, resulting in errors in the standard library headers and warnings like -Wc++17-extensions in my code (even though I compile with -std=c++20 or /std:c++latest).

      Can be easily reproduced with my project: https://github.com/absurdworlds/awlib. For example "error: No member named basic_string_view in namespace std" in the file "\types\include\aw\types\string_view.h".
      I am using clangd shipped with the Qt Creator.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-27764
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            hedede hedede
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes