CppEditor: Always use "clang:std=" for specifying the language version

... when in clang-cl mode.
We observe strange behavior when keeping the MSVC /std:c++xx syntax,
namely that files that are not specified in the compilation database
appear to get parsed without a language version. The problem does not
occur when passing the flag via "clang:".

Fixes: QTCREATORBUG-27764
Change-Id: I0035e5fef6dfd37fbbe396b538f38fc29b23923b
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>