src/plugins/cppeditor/compileroptionsbuilder.cpp
@@ -473,16 +473,16 @@ void CompilerOptionsBuilder::addLanguageVersionAndExtensions()
         default:
             break;
         case LanguageVersion::CXX14:
-            option = "/std:c++14";
+            option = "-clang:std=c++14";
             break;
         case LanguageVersion::CXX17:
-            option = "/std:c++17";
+            option = "-clang:std=c++17";
             break;
         case LanguageVersion::CXX20:
-            option = "/std:c++20";
+            option = "-clang:std=c++20";
             break;
         case LanguageVersion::CXX2b:
-            option = "/std:c++latest";
+            option = "-clang:std=c++2b";
             break;
         }
 
@@ -910,12 +910,10 @@ void CompilerOptionsBuilder::evaluateCompilerFlags()
             theOption[0] = '-';
         }
 
-        // Clang-cl (as of Clang 12) frontend doesn't know about -std:c++20
-        // but the clang front end knows about -std=c++20
-        // https://github.com/llvm/llvm-project/blob/release/12.x/clang/lib/Driver/ToolChains/Clang.cpp#L5855
         if (toolChain == ProjectExplorer::Constants::MSVC_TOOLCHAIN_TYPEID ||
             toolChain == ProjectExplorer::Constants::CLANG_CL_TOOLCHAIN_TYPEID) {
-            theOption.replace("-std:c++20", "-clang:-std=c++20");
+            theOption.replace("-std:c++latest", "-clang:-std=c++2b");
+            theOption.replace("-std:c++", "-clang:-std=c++");
         }
 
         m_compilerFlags.flags.append(theOption);
